--- a/src/Resources/public/administration/css/blur-elysium-blocks.css
+++ b/src/Resources/public/administration/css/blur-elysium-blocks.css
@@ -1,1 +1,1 @@
-.smart-bar-header__title-container{display:flex;align-items:center}.smart-bar-header__title-container .sw-icon{margin-right:1rem}.blur-slysium-slides-create__main-content{padding-top:2.5rem;padding-left:1rem;padding-right:1rem}
+.smart-bar-header__title-container{display:flex;align-items:center}.smart-bar-header__title-container .sw-icon{margin-right:1rem}.blur-slysium-slides-create__main-content{padding-top:2.5rem;padding-left:1rem;padding-right:1rem}.blur-slysium-slides-detail__header-actions-container .sw-button{margin:0!important}
