--- a/src/Resources/app/administration/src/module/blur-elysium-slides/page/blur-elysium-slides-create/blur-elysium-slides-create.scss
+++ b/src/Resources/app/administration/src/module/blur-elysium-slides/page/blur-elysium-slides-create/blur-elysium-slides-create.scss
@@ -3,3 +3,10 @@
     padding-left: 1rem;
     padding-right: 1rem;
 }
+
+.blur-elysium-slides__media-upload {
+
+    .sw-media-upload-v2__header {
+        align-items: center !important;
+    }
+}
