--- a/src/Resources/app/administration/src/module/blur-elysium-slides/page/blur-elysium-slides-detail/blur-elysium-slides-detail.twig
+++ b/src/Resources/app/administration/src/module/blur-elysium-slides/page/blur-elysium-slides-detail/blur-elysium-slides-detail.twig
@@ -1,8 +1,8 @@
 <sw-page class="blur-slysium-slides-detail__page">
 
     <template #smart-bar-header>
-        <h2 v-if="blurElysiumSlide && blurElysiumSlide.label">
-            {{ blurElysiumSlide.label }}
+        <h2 v-if="blurElysiumSlide && blurElysiumSlide.name">
+            {{ blurElysiumSlide.name }}
         </h2>
     </template>
 
