add snippets to default component preview

--- a/src/Resources/app/administration/src/module/sw-cms/elements/blur-elysium-slider/component/blur-cms-el-elysium-slider.twig
+++ b/src/Resources/app/administration/src/module/sw-cms/elements/blur-elysium-slider/component/blur-cms-el-elysium-slider.twig
@@ -9,17 +9,17 @@
                     <div class="blur-cms-el-elysium-slider__slider-preview__container">
                         
                         <div class="blur-cms-el-elysium-slider__slider-preview__title">
-                            Elysium Slider
+                            {{ $tc( 'blurElysiumSlider.cmsElement.component.preview.defaultTitleValue' ) }}
                         </div>
                         
                         <div class="blur-cms-el-elysium-slider__slider-preview__description">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam lacinia, erat ut tempus vehicula, nisi leo aliquam orci, non varius erat urna at diam. Sed hendrerit tincidunt nisl non convallis. Suspendisse congue sed neque id viverra.
+                            {{ $tc( 'blurElysiumSlider.cmsElement.component.preview.defaultDescriptionValue' ) }}
                         </div>
 
                         <div class="blur-cms-el-elysium-slider__slider-preview__actions">
                             
                             <span class="sw-button blur-cms-el-elysium-slider__slider-preview__button-element">
-                                Mehr Erfahren
+                                {{ $tc( 'blurElysiumSlider.cmsElement.component.preview.defaultButtonLabelValue' ) }}
                             </span>
                         </div>
                     </div>
