add cms element preview image

--- a/src/Resources/app/administration/src/module/sw-cms/elements/blur-elysium-slider/preview/blur-cms-el-preview-elysium-slider.twig
+++ b/src/Resources/app/administration/src/module/sw-cms/elements/blur-elysium-slider/preview/blur-cms-el-preview-elysium-slider.twig
@@ -1,6 +1,6 @@
 {% block blur_cms_element_elysium_slider_preview %}
     <div class="blur-cms-el-preview-elysium-slider">
-        <img class="sw-cms-el-preview-dailymotion-img"
-             :src="'blurelysiumblocks/static/img/test.svg' | asset">
+        <img class="blur-cms-el-preview-elysium-slider__preview-image"
+             :src="'blurelysiumslider/static/img/component-preview-image.png' | asset">
     </div>
 {% endblock %}
