--- a/src/Resources/app/administration/src/module/sw-cms/elements/blur-elysium-slider/preview/blur-cms-el-preview-elysium-slider.scss
+++ b/src/Resources/app/administration/src/module/sw-cms/elements/blur-elysium-slider/preview/blur-cms-el-preview-elysium-slider.scss
@@ -5,3 +5,8 @@
     justify-content: center;
     align-items: center;
 }
+
+.blur-cms-el-preview-elysium-slider__preview-image {
+    max-width: 100%;
+    max-height: 100%;
+}
