--- a/src/Resources/views/storefront/element/cms-element-blur-elysium-slider.html.twig
+++ b/src/Resources/views/storefront/element/cms-element-blur-elysium-slider.html.twig
@@ -18,7 +18,7 @@
 
         {% if element.data.slideCollection is empty %}
             {% block cms_element_blur_elysium_slider_empty_state %}
-                Here is no slide :(
+                <!-- no slide collection here -->
             {% endblock %}
         {% else %}
             {% block cms_element_blur_elysium_slider_container %}
