remove slide container alignment class

--- a/src/Resources/views/storefront/element/blur-elysium-slide.html.twig
+++ b/src/Resources/views/storefront/element/blur-elysium-slide.html.twig
@@ -14,7 +14,7 @@
     {% endif %}
 
     <div data-elysium-slide-id="{{ slide.id }}" 
-         class="cms-element-elysium-slide {{ slideHorizonalAlignment }}">
+         class="cms-element-elysium-slide">
         
         <div class="cms-element-elysium-slide__container">
 
