--- a/src/Resources/app/administration/src/module/sw-cms/elements/blur-elysium-slider/config/blur-cms-el-config-elysium-slider.twig
+++ b/src/Resources/app/administration/src/module/sw-cms/elements/blur-elysium-slider/config/blur-cms-el-config-elysium-slider.twig
@@ -5,15 +5,13 @@
         <template slot-scope="{ active }">
             <sw-tabs-item
                 name="content"
-                :active-tab="active"
-            >
+                :active-tab="active">
                 {{ $tc('blurElysiumSlider.cmsElement.config.tabs.content') }}
             </sw-tabs-item>
 
             <sw-tabs-item
                 name="setting"
-                :active-tab="active"
-            >
+                :active-tab="active">
                 {{ $tc('blurElysiumSlider.cmsElement.config.tabs.settings') }}
             </sw-tabs-item>
         </template>
@@ -25,31 +23,88 @@
 
             <template v-if="active === 'content'">
 
-                <sw-entity-multi-id-select
-                    v-model="elysiumSlideCollection"
-                    :repository="elysiumSlidesRepository"
-                    :label="$tc('blurElysiumSlider.cmsElement.config.slidesSelect.label')"
-                    :placeholder="$tc('blurElysiumSlider.cmsElement.config.slidesSelect.placeholder')"
-                    @change="onChange"
-                />
+                <sw-card 
+                    :title="$tc('blurElysiumSlider.cmsElement.settings.slideCollectionTitle')" 
+                    class="bc-card bc-card__static-title">
+
+                    <sw-entity-multi-id-select
+                        v-model="elysiumSlideCollection"
+                        class="bc-field__no-margin bc-field__px-1"
+                        :repository="elysiumSlidesRepository"
+                        :label="$tc('blurElysiumSlider.cmsElement.config.slidesSelect.label')"
+                        :placeholder="$tc('blurElysiumSlider.cmsElement.config.slidesSelect.placeholder')"
+                        @change="onChange" />
+
+                </sw-card>
             </template>
 
             <template v-if="active === 'setting'">
 
-                <sw-container columns="1fr 1fr" gap="0 2rem">
+                <sw-card 
+                    :title="$tc('blurElysiumSlider.cmsElement.settings.generalTitle')" 
+                    class="bc-card bc-card__static-title">
 
-                    <sw-switch-field 
-                        :label="$tc('blurElysiumSlider.cmsElement.config.sliderNavigation.label')" 
-                        v-model="element.config.sliderNavigation.value"
-                        noMarginTop="true">
-                    </sw-switch-field>
+                    <sw-container columns="1fr 1fr" gap="0 2rem">
 
-                    <sw-switch-field 
-                        :label="$tc('blurElysiumSlider.cmsElement.config.sliderOverlay.label')"
-                        v-model="element.config.sliderOverlay.value"
-                        noMarginTop="true">
-                    </sw-switch-field>
-                </sw-container>
+                        <div>
+
+                            <sw-switch-field 
+                                :label="$tc('blurElysiumSlider.cmsElement.config.sliderNavigation.label')" 
+                                v-model="element.config.sliderNavigation.value"
+                                class="bc-field__no-margin">
+                            </sw-switch-field>
+
+                            <sw-switch-field 
+                                :label="$tc('blurElysiumSlider.cmsElement.config.sliderOverlay.label')"
+                                v-model="element.config.sliderOverlay.value"
+                                class="bc-field__no-margin">
+                            </sw-switch-field>
+                        </div>
+
+                        <div>
+
+                            <sw-number-field 
+                                numberType="int" 
+                                v-model="element.config.slideSpeed.value"
+                                class="bc-field__no-margin bc-field__px-1"
+                                :label="$tc('blurElysiumSlider.cmsElement.config.slideSpeed.label')"
+                                :placeholder="$tc('blurElysiumSlider.cmsElement.config.slideSpeed.placeholder')"
+                                :step="null" 
+                                :min="null" 
+                                :max="null" 
+                                :digits="null"
+                                :allowEmpty="false">
+                        </div>
+
+                    </sw-container>
+                </sw-card>
+                
+                <sw-card 
+                    :title="$tc('blurElysiumSlider.cmsElement.settings.autoplayTitle')" 
+                    class="bc-card bc-card__static-title">
+
+                    <sw-container columns="1fr 1fr" gap="0 2rem">
+
+                        <sw-switch-field 
+                            :label="$tc('blurElysiumSlider.cmsElement.config.sliderAutoplay.label')" 
+                            v-model="element.config.sliderAutoplay.value"
+                            class="bc-field__no-margin">
+                        </sw-switch-field>
+
+                        <sw-number-field 
+                            numberType="int" 
+                            v-model="element.config.sliderAutoplayTimeout.value"
+                            class="bc-field__no-margin bc-field__px-1"
+                            :label="$tc('blurElysiumSlider.cmsElement.config.sliderAutoplayTimeout.label')"
+                            :placeholder="$tc('blurElysiumSlider.cmsElement.config.sliderAutoplayTimeout.placeholder')"
+                            :step="null" 
+                            :min="3000" 
+                            :max="null" 
+                            :digits="null"
+                            :allowEmpty="false">
+                        </sw-number-field>
+                    </sw-container>
+                </sw-card>
             </template>
         </template>
     </sw-tabs>
