change url input from url field to text field

--- a/src/Resources/app/administration/src/module/blur-elysium-slides/component/blur-elysium-slides-basic-form/blur-elysium-slides-basic-form.twig
+++ b/src/Resources/app/administration/src/module/blur-elysium-slides/component/blur-elysium-slides-basic-form/blur-elysium-slides-basic-form.twig
@@ -37,11 +37,14 @@
             required
         />
 
-        <sw-url-field
+        <sw-field
             v-model="blurElysiumSlides.url"
+            type="text"
             :label="$tc('BlurElysiumSlides.baseForm.urlInput.title')"
             :placeholder="$tc('BlurElysiumSlides.baseForm.urlInput.placeholder')"
             :help-text="$tc('BlurElysiumSlides.baseForm.urlInput.helpText')"
+            required
         />
+        
     </sw-container>
 </sw-container>
