--- a/src/Resources/app/administration/src/module/sw-cms/elements/blur-elysium-slider/component/blur-cms-el-elysium-slider.twig
+++ b/src/Resources/app/administration/src/module/sw-cms/elements/blur-elysium-slider/component/blur-cms-el-elysium-slider.twig
@@ -29,11 +29,13 @@
                         <sw-icon class="blur-cms-el-elysium-slider__slider-preview__navigation-button navigation-prev"
                                 name="default-arrow-head-left"
                                 size="24"
+                                :color="sliderArrowColor"
                                 @click="slideArrowClick( -1 )">
                         </sw-icon>
                         <sw-icon class="blur-cms-el-elysium-slider__slider-preview__navigation-button navigation-next"
                                 name="default-arrow-head-right"
                                 size="24"
+                                :color="sliderArrowColor"
                                 @click="slideArrowClick( 1 )">
                         </sw-icon>
 
