--- a/src/Resources/app/administration/src/module/sw-cms/elements/blur-elysium-slider/config/blur-cms-el-config-elysium-slider.twig
+++ b/src/Resources/app/administration/src/module/sw-cms/elements/blur-elysium-slider/config/blur-cms-el-config-elysium-slider.twig
@@ -133,6 +133,36 @@
 
                 </sw-card>
 
+                <sw-card 
+                    :title="$tc('blurElysiumSlider.cmsElement.settings.navigationStylingTitle')" 
+                    class="bc-card bc-card__static-title">
+
+                    <sw-container columns="1fr 1fr" gap="0 2rem">
+
+                        <sw-colorpicker 
+                            v-model="element.config.sliderDotColor.value"
+                            colorOutput="auto"
+                            :label="$tc('blurElysiumSlider.cmsElement.config.sliderDotColor.label')"
+                            :alpha="true"
+                            :disabled="false"
+                            :colorLabels="true"
+                            zIndex="1010">
+                        </sw-colorpicker>
+
+                        <sw-colorpicker 
+                            v-model="element.config.sliderDotActiveColor.value"
+                            colorOutput="auto"
+                            :label="$tc('blurElysiumSlider.cmsElement.config.sliderDotActiveColor.label')"
+                            :alpha="true"
+                            :disabled="false"
+                            :colorLabels="true"
+                            zIndex="1010">
+                        </sw-colorpicker>
+
+                    </sw-container>
+
+                </sw-card>
+
             </template>
 
         </template>
