--- a/src/Resources/views/storefront/element/cms-element-blur-elysium-slider.html.twig
+++ b/src/Resources/views/storefront/element/cms-element-blur-elysium-slider.html.twig
@@ -6,6 +6,8 @@
     {% set sliderAutoplay = element.translated.config.sliderAutoplay.value %}
     {% set sliderAutoplayTimeout = element.translated.config.sliderAutoplayTimeout.value %}
     {% set sliderArrowColors = element.translated.config.sliderArrowColor.value %}
+    {% set sliderDotColors = element.translated.config.sliderDotColor.value %}
+    {% set sliderDotActiveColors = element.translated.config.sliderDotActiveColor.value %}
 
     {% set sliderSettings = {
         nav: sliderSettingsNav,
@@ -20,11 +22,18 @@
         autoplayButtonOutput: false
     } %}
 
-    {% if sliderArrowColors %}
+    {% if sliderArrowColors or sliderDotColors or sliderDotActiveColors %}
         {% apply spaceless %}
             <style>
                 #elysiumSlider-{{ element.id }} .cms-element-elysium-slider__control-button {
                     color: {{ sliderArrowColors }};
+                }
+                #elysiumSlider-{{ element.id }} .cms-element-elysium-slider__navigation-bullet {
+                    background-color: {{ sliderDotColors }};
+                }
+                #elysiumSlider-{{ element.id }} .cms-element-elysium-slider__navigation-bullet:hover,
+                #elysiumSlider-{{ element.id }} .cms-element-elysium-slider__navigation-bullet.tns-nav-active {
+                    background-color: {{ sliderDotActiveColors }};
                 }
             </style>
         {% endapply %}
