--- a/src/Resources/app/administration/src/module/blur-elysium-slides/component/blur-elysium-slides-basic-form/blur-elysium-slides-basic-form.twig
+++ b/src/Resources/app/administration/src/module/blur-elysium-slides/component/blur-elysium-slides-basic-form/blur-elysium-slides-basic-form.twig
@@ -1,50 +1,62 @@
-<sw-container columns="1fr" gap="0 32px">
+{% block blur_elysium_slides_basic_form %}
+    <sw-container columns="1fr" gap="0 32px">
 
-    <sw-text-field
-        v-model="blurElysiumSlides.name"
-        required
-        :label="$tc('sw-customer.baseForm.labelLastName')"
-        :placeholder="$tc('BlurElysiumSlides.baseForm.labelInput.placeholder')"
-        :help-text="$tc('BlurElysiumSlides.baseForm.labelInput.helpText')"
-        :error="blurElysiumSlidesNameError"
-    />
+        {% block blur_elysium_slides_input_name %}
+            <sw-text-field
+                v-model="blurElysiumSlides.name"
+                required
+                :label="$tc('sw-customer.baseForm.labelLastName')"
+                :placeholder="$tc('BlurElysiumSlides.baseForm.labelInput.placeholder')"
+                :help-text="$tc('BlurElysiumSlides.baseForm.labelInput.helpText')"
+                :error="blurElysiumSlidesNameError"
+            />
+        {% endblock %}
 
-    <sw-field
-        v-model="blurElysiumSlides.title"
-        type="text"
-        requi
-        :label="$tc('BlurElysiumSlides.baseForm.titleInput.title')"
-        :placeholder="$tc('BlurElysiumSlides.baseForm.titleInput.placeholder')"
-        :help-text="$tc('BlurElysiumSlides.baseForm.titleInput.helpText')"
-    />
+        {% block blur_elysium_slides_input_title %}
+            <sw-field
+                v-model="blurElysiumSlides.title"
+                type="text"
+                requi
+                :label="$tc('BlurElysiumSlides.baseForm.titleInput.title')"
+                :placeholder="$tc('BlurElysiumSlides.baseForm.titleInput.placeholder')"
+                :help-text="$tc('BlurElysiumSlides.baseForm.titleInput.helpText')"
+            />
+        {% endblock %}
 
-    <sw-field
-        v-model="blurElysiumSlides.description"
-        type="textarea"
-        :label="$tc('BlurElysiumSlides.baseForm.descriptionInput.title')"
-        :placeholder="$tc('BlurElysiumSlides.baseForm.descriptionInput.placeholder')"
-        :help-text="$tc('BlurElysiumSlides.baseForm.descriptionInput.helpText')"
-    />
+        {% block blur_elysium_slides_input_description %}
+            <sw-field
+                v-model="blurElysiumSlides.description"
+                type="textarea"
+                :label="$tc('BlurElysiumSlides.baseForm.descriptionInput.title')"
+                :placeholder="$tc('BlurElysiumSlides.baseForm.descriptionInput.placeholder')"
+                :help-text="$tc('BlurElysiumSlides.baseForm.descriptionInput.helpText')"
+            />
+        {% endblock %}
 
-    <sw-container columns="1fr 1fr" gap="0 32px">
+        <sw-container columns="1fr 1fr" gap="0 32px">
 
-        <sw-field
-            v-model="blurElysiumSlides.button_label"
-            type="text"
-            :label="$tc('BlurElysiumSlides.baseForm.buttonLabelInput.title')"
-            :placeholder="$tc('BlurElysiumSlides.baseForm.buttonLabelInput.placeholder')"
-            :help-text="$tc('BlurElysiumSlides.baseForm.buttonLabelInput.helpText')"
-            required
-        />
-
-        <sw-field
-            v-model="blurElysiumSlides.url"
-            type="text"
-            :label="$tc('BlurElysiumSlides.baseForm.urlInput.title')"
-            :placeholder="$tc('BlurElysiumSlides.baseForm.urlInput.placeholder')"
-            :help-text="$tc('BlurElysiumSlides.baseForm.urlInput.helpText')"
-            required
-        />
-        
-    </sw-container>
-</sw-container>
+            {% block blur_elysium_slides_input_button_label %}
+                <sw-field
+                    v-model="blurElysiumSlides.button_label"
+                    type="text"
+                    :label="$tc('BlurElysiumSlides.baseForm.buttonLabelInput.title')"
+                    :placeholder="$tc('BlurElysiumSlides.baseForm.buttonLabelInput.placeholder')"
+                    :help-text="$tc('BlurElysiumSlides.baseForm.buttonLabelInput.helpText')"
+                    required
+                />
+            {% endblock %}
+            
+            {% block blur_elysium_slides_input_url %}
+                <sw-field
+                    v-model="blurElysiumSlides.url"
+                    type="text"
+                    :label="$tc('BlurElysiumSlides.baseForm.urlInput.title')"
+                    :placeholder="$tc('BlurElysiumSlides.baseForm.urlInput.placeholder')"
+                    :help-text="$tc('BlurElysiumSlides.baseForm.urlInput.helpText')"
+                    required
+                />
+            {% endblock %}
+            
+        </sw-container>
+    </sw-container> 
+{% endblock %}
