--- a/src/Resources/app/administration/src/module/sw-cms/blocks/text-image/blur-elysium-slider-block/preview/sw-cms-preview-blur-elysium-slider-block.twig
+++ b/src/Resources/app/administration/src/module/sw-cms/blocks/text-image/blur-elysium-slider-block/preview/sw-cms-preview-blur-elysium-slider-block.twig
@@ -1,4 +1,9 @@
-<div class="sw-cms-preview-blur-elysium-slider-block">
-    <img class="sw-cms-preview-blur-elysium-slider-block__preview-image" 
-        :src="'blurelysiumslider/static/img/component-preview-image.png' | asset">
-</div>
+{% block blur_cms_block_elysium_slider_preview %}
+    <div class="sw-cms-preview-blur-elysium-slider-block">
+
+        {% block blur_cms_block_elysium_slider_preview %}
+            <img class="sw-cms-preview-blur-elysium-slider-block__preview-image" 
+                :src="'blurelysiumslider/static/img/component-preview-image.png' | asset">
+        {% endblock %}
+    </div>
+{% endblock %}
