--- a/src/Resources/app/administration/src/module/blur-elysium-slides/component/blur-elysium-slides-basic-form/blur-elysium-slides-basic-form.twig
+++ b/src/Resources/app/administration/src/module/blur-elysium-slides/component/blur-elysium-slides-basic-form/blur-elysium-slides-basic-form.twig
@@ -5,7 +5,7 @@
             <sw-text-field
                 v-model="blurElysiumSlides.name"
                 required
-                :label="$tc('sw-customer.baseForm.labelLastName')"
+                :label="$tc('BlurElysiumSlides.baseForm.labelInput.title')"
                 :placeholder="$tc('BlurElysiumSlides.baseForm.labelInput.placeholder')"
                 :help-text="$tc('BlurElysiumSlides.baseForm.labelInput.helpText')"
                 :error="blurElysiumSlidesNameError"
