--- a/src/Resources/app/administration/src/module/blur-elysium-slides/page/blur-elysium-slides-list/blur-elysium-slides-list.twig
+++ b/src/Resources/app/administration/src/module/blur-elysium-slides/page/blur-elysium-slides-list/blur-elysium-slides-list.twig
@@ -89,6 +89,7 @@
                                 @inline-edit-save="onInlineEditSave"
                                 @page-change="onPageChange" 
                                 @column-sort="onSortColumn" 
+                                @items-delete-finish="onDeleteItems"
                             >
 
                                 <template #actions="{ item }">
