--- a/src/Resources/app/administration/src/module/blur-elysium-slides/page/blur-elysium-slides-create/blur-elysium-slides-create.scss
+++ b/src/Resources/app/administration/src/module/blur-elysium-slides/page/blur-elysium-slides-create/blur-elysium-slides-create.scss
@@ -1,7 +1,5 @@
 .blur-slysium-slides-create__main-content {
-    padding-top: 2.5rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
+    padding: 2.5rem 1rem 4rem;
 }
 
 .blur-elysium-slides__media-upload {
