--- a/src/Resources/app/administration/src/module/blur-elysium-slides/page/blur-elysium-slides-detail/blur-elysium-slides-detail.twig
+++ b/src/Resources/app/administration/src/module/blur-elysium-slides/page/blur-elysium-slides-detail/blur-elysium-slides-detail.twig
@@ -105,7 +105,7 @@
                 {% endblock %}
 
                 {% block blur_elysium_slides_detail_view_card_custom_fields %}
-                    <sw-card :title="$tc('swModules.customFields.cardLabel')"
+                    <sw-card :title="$tc('BlurElysiumSlides.customFields.cardTitle')"
                             v-if="customFieldSets !== undefined"
                             :isLoading="isLoading">
                         <sw-custom-field-set-renderer
